--- a/about us/education.html
+++ b/about us/education.html
@@ -44,8 +44,8 @@
                 <div class="card bg-dark border-success h-100 shadow">
                     <img src="https://cdn.pixabay.com/photo/2023/07/20/05/17/ai-generated-8138379_1280.png" class="card-img-top" alt="Stocks">
                     <div class="card-body">
-                        <h5 class="card-title text-light">Why Invest?</h5>
-                        <p class="card-text">Grow Your Wealth Over time, the stock market has historically delivered strong returns. By investing, your money has the potential to grow through capital appreciation (rising stock prices) and dividends (company profit sharing).
+                        <h5 class="card-title text-success">Why Invest?</h5>
+                        <p class="card-text text-light">Grow Your Wealth Over time, the stock market has historically delivered strong returns. By investing, your money has the potential to grow through capital appreciation (rising stock prices) and dividends (company profit sharing).
                             Beat Inflation Keeping your money in a savings account often means it loses value over time due to inflation. Stock investments can help outpace inflation, preserving and increasing your purchasing power. Build Long-Term Security
                             Investing consistently over the years can help you build financial freedom, support retirement goals, or save for major life events like buying a house or funding education. Partial Ownership in Great Companies Buying a share
                             means owning a small piece of a company. If the company performs well, your investment benefits too. Liquidity & Flexibility Stocks are easily bought and sold, offering quick access to your money compared to other investment
@@ -53,12 +53,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card bg-dark border-success h-100 shadow">
-                    <img src="https://cdn.pixabay.com/photo/2019/08/26/08/12/street-4431082_1280.jpg" class="card-img-top" alt="Investment">
-                    <div class="card-body">
-                        <h5 class="card-title text-light">Market Scope</h5>
-                        <p class="card-text">Diverse Investment Opportunities The stock market covers a wide range of industries — from technology and healthcare to energy and finance. This gives investors the ability to diversify their portfolios and reduce risk. Global
+            <div class="col-md-4 ">
+                <div class="card bg-dark border-success h-100 shadow ">
+                    <img src="https://cdn.pixabay.com/photo/2019/08/26/08/12/street-4431082_1280.jpg " class="card-img-top " alt="Investment ">
+                    <div class="card-body ">
+                        <h5 class="card-title text-success ">Market Scope</h5>
+                        <p class="card-text text-light " ">Diverse Investment Opportunities The stock market covers a wide range of industries — from technology and healthcare to energy and finance. This gives investors the ability to diversify their portfolios and reduce risk. Global
                             Access With modern platforms, investors can now access not just local companies but also international markets, opening up more growth potential and exposure to global trends. Innovation and Growth Potential Many companies
                             listed on the stock market are leaders in innovation. Investing in these businesses allows you to benefit from the growth of emerging industries like AI, renewable energy, biotech, and more. Economic Indicator The stock market
                             reflects the broader economy. Understanding its scope helps investors anticipate trends, make informed decisions, and align their investments with strong sectors. Scalability Whether you're a beginner with a small budget or
@@ -66,12 +66,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card bg-dark border-success h-100 shadow">
-                    <img src="https://cdn.pixabay.com/photo/2020/11/27/16/59/man-5782411_1280.jpg" class="card-img-top" alt="Future of Finance">
-                    <div class="card-body">
-                        <h5 class="card-title text-light">Future is Digital</h5>
-                        <p class="card-text">Tech-Driven Growth Companies leading the digital revolution — like those in AI, cybersecurity, robotics, and software — are showing massive growth potential. Investing in these areas lets you ride the wave of innovation. Changing
+            <div class="col-md-4 ">
+                <div class="card bg-dark border-success h-100 shadow ">
+                    <img src="https://cdn.pixabay.com/photo/2020/11/27/16/59/man-5782411_1280.jpg " class="card-img-top " alt="Future of Finance ">
+                    <div class="card-body ">
+                        <h5 class="card-title text-success ">Future is Digital</h5>
+                        <p class="card-text text-light " ">Tech-Driven Growth Companies leading the digital revolution — like those in AI, cybersecurity, robotics, and software — are showing massive growth potential. Investing in these areas lets you ride the wave of innovation. Changing
                             Consumer Behavior From online shopping to remote work, digital habits are shaping how businesses operate. Investors can benefit by backing companies that are adapting and thriving in this digital shift. Emerging Digital Markets
                             New sectors like cryptocurrencies, blockchain, and the metaverse are creating entirely new investment opportunities that didn’t exist a decade ago. Future-Proofing Your Portfolio Including digital-focused companies in your
                             investments helps you stay ahead of trends and build a portfolio that aligns with the future economy. Global Impact The digital future isn’t limited to one country or region — it’s a global movement. Investors can tap into
@@ -83,43 +83,43 @@
     </div>
 
     <!-- Call to Action -->
-    <div class="container text-center my-5">
-        <h2 class="text-success">Start Your Investment Journey Now!</h2>
-        <a href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html" class="btn btn-success btn-lg mt-3">Get Started</a>
+    <div class="container text-center my-5 ">
+        <h2 class="text-success ">Start Your Investment Journey Now!</h2>
+        <a href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html " class="btn btn-success btn-lg mt-3 ">Get Started</a>
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5 class="text-success">About Us</h5>
+    <footer class="bg-dark text-light py-5 ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md-4 ">
+                    <h5 class="text-success ">About Us</h5>
                     <p>Stocksensi helps investors stay informed and make the best investment decisions with real-time market data and expert analysis.</p>
                 </div>
-                <div class="col-md-4">
-                    <h5 class="text-success">Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\index.html">Home</a>
-                        <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html">About Us</a>
-                        <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html">Pricing</a>
-                        <a class="nav-link active" href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html">Utilities</a>
-                        <a class="nav-link" href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html">Login</a>
+                <div class="col-md-4 ">
+                    <h5 class="text-success ">Quick Links</h5>
+                    <ul class="list-unstyled ">
+                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\index.html ">Home</a>
+                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\about us\About_us2.html ">About Us</a>
+                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\pricing\pricing.html ">Pricing</a>
+                        <a class="nav-link active " href="C:\Users\hp\AppData\Local\HTML\webs\about us\utlity_clases.html ">Utilities</a>
+                        <a class="nav-link " href="C:\Users\hp\AppData\Local\HTML\webs\login\loginpage.html ">Login</a>
                     </ul>
                 </div>
-                <div class="col-md-4">
-                    <h5 class="text-success">Contact Us</h5>
+                <div class="col-md-4 ">
+                    <h5 class="text-success ">Contact Us</h5>
                     <p>Email: joshiman249@gmail.com</p>
                     <p>Phone: 8107484446</p>
                 </div>
             </div>
-            <div class="text-center mt-3">
+            <div class="text-center mt-3 ">
                 <p>&copy; 2025 Stocksensi. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js "></script>
 </body>
 
 
